@@ -13,6 +13,7 @@ they extend. Included below is a list of interfaces available in this module.
 Intefaces:
   - ShelfI: Interface into the L{Shelf}
   - MainWindowI: Interface into L{ed_main.MainWindow}
+  - AutoCompI: Interface for adding autocompletion helpers
 
 @summary: Main Plugin interface defintions
 
@@ -28,6 +29,27 @@ import wx
 
 # Local Imports
 import plugin
+
+#--------------------------------------------------------------------------#
+
+class AutoCompI(plugin.Interface):
+    """The Autocompletion interface.
+
+    """
+    def GetCompleter(self, buff):
+        """Get the completer object implemented by this plugin
+        @param: buff EditraStc instance
+        @return: instance of autocomp.BaseCompleter
+
+        """
+        raise NotImplementedError
+
+    def GetFileTypeId(self):
+        """Get the filetype this completer is associated with
+        @return: int
+
+        """
+        return 0
 
 #--------------------------------------------------------------------------#
 
